sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
for (i<-0 to getNombreValeurs()-1)
  for (j<-O to getNombreValeurs()-2-i)
    if (plusPetit(j+1,j))
       echange(j,j+1)
        
}

